<resources>
    <string name="app_name">牛互动</string>

    <string name="start_live_streaming_text">开始直播连麦</string>
    <string name="room_nick_name_edit_text">%1$s的房间</string>
    <string name="live_settings_title">设置</string>
    <string name="live_settings_speaker">扬声器开关</string>
    <string name="live_settings_microphone">麦克风开关</string>
    <string name="live_settings_flashlight">闪光灯开关</string>
    <string name="setting_on_text">开启</string>
    <string name="setting_off_text">关闭</string>

    <string name="publish_url">rtmp://pili-publish.qnsdk.com/sdk-live/%1$s?serialnum=%2$d</string>
    <string name="channel_error_title">连接错误</string>
    <string name="ok">OK</string>

    <string name="title_rtc">连麦互动</string>
    <string name="title_pk_candidates">可以 PK 的主播</string>
    <string name="title_user_feedback">用户反馈</string>
    <string name="version_code_text">牛互动 v%1$s</string>
    <string name="quit_pk_button">退出 PK</string>
    <string name="remote_refused_pk_request">主播拒绝了你的 PK 请求</string>
    <string name="confirm_be_refused">好吧 主播好残忍</string>
    <string name="request_pk_text">%1$s 请求 PK</string>
    <string name="accept_pk">开始 PK</string>
    <string name="refuse_pk">拒绝 TA</string>

    <string name="hint_user_feedback">请详细描述您在使用过程中遇到的问题</string>
    <string name="text_submit_feedback">提交</string>

    <string name="im_connect_error">连接即时通讯失败</string>

    <string name="PK_text">PK</string>

    <string name="tips_create_room_failed">创建房间失败！</string>
    <string name="toast_user_agreement">请先同意用户协议！</string>
    <string name="toast_login_failed">登录失败</string>
    <string name="toast_can_not_start_pk">无法发起 PK 请求</string>
    <string name="toast_no_live_rooms">当前没有正在直播的房间</string>
    <string name="toast_close_room_failed">关闭房间失败 ：</string>
    <string name="toast_update_profile_failed">更新用户信息失败</string>
    <string name="toast_update_room_name_success">更新房间名成功</string>
    <string name="toast_update_room_name_failed">更新房间名失败</string>
    <string name="toast_front_flashlight">前置摄像头不支持闪光灯</string>
    <string name="toast_get_live_rooms_failed">获取直播房间失败：</string>
    <string name="toast_bad_token">您的账号已在其他设备登录！</string>
    <string name="toast_room_not_exist">处理失败，主播已下线！</string>
    <string name="toast_room_in_pk">主播在 PK 中，无法发起接受新的 PK 请求</string>
    <string name="toast_room_not_in_pk">房间未在 PK</string>
    <string name="toast_player_open_failed">播放器打开失败，请确认主播当前的直播状态</string>
    <string name="toast_network_connect_failed">网络连接失败，请检查当前网络状态</string>
    <string name="toast_picture_upload_limit">最多上传 3 张图片哦</string>

    <string name="hint_modify_nick_name">请输入昵称</string>
    <string name="hint_modify_room_name">请输入房间名称</string>
    <string name="text_gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>

    <string name="login_hint_phone">请输入手机号</string>
    <string name="login_hint_verification_code">请输入验证码</string>
    <string name="login_request_verification_code">获取验证码</string>
    <string name="login_login">登录</string>
    <string name="user_agreement">尊敬的用户您好！请在注册牛互动直播平台账号之前仔细阅读此协议（“本协议”）。本协议已对与您的权益具有或可能具有重大关系的条款用粗体字予以标注，请您注意阅读。\n
您注册及/或使用平台账号即表示您认可并同意遵守以下条款，以及我们后续对条款随时所作的修改。若您对本协议存在疑问，或者无法接受全部或者部分条款，可通过本协议附则所列方式联系我们，在您未与我们沟通一致前，请停止注册及使用平台账号。\n
请确认您已年满18周岁，或您已年满16周岁且依靠自己的劳动收入作为主要生活来源，否则请您在法定监护人陪同下仔细阅读本协议并决定是否接受本协议，或者停止注册及使用本协议项下的账号及服务。\n
第一章总则\n
第1条本协议是您与牛互动之间关于您注册并使用牛互动直播平台账号及相关服务所订立的协议。牛互动直播可根据自身对商业、法律与政策等要素的判断更新本协议。\n
第2条牛互动直播平台是向用户提供一种更方便地进行音视频直播、观看音视频直播并与用户进行互动的音视频社交服务平台，旨在为您提供虚拟礼物、技术支持、流量入口等进行音视频社交所需的非独家的软件许可使用及信息网络服务。\n
第二章牛互动账号\n
第3条您注册成功后，牛互动直播将为您提供一个账号（“牛互动账号”）。您在申请使用牛互动账号时，应当向牛互动直播提供真实、准确的个人资料，以完成实名认证；您应确保所提供的姓名和身份证号等信息为本人所有，并授权牛互动直播通过依法成立的合法采集机构或者认证机构对您所提供姓名和身份证号等信息的真实性和有效性进行验证。如您提供的个人资料有误，牛互动直播有权拒绝您使用账号发布信息。如您个人资料发生变动，请及时予以更新。\n
第4条牛互动账号的所有权归牛互动直播所有，您注册通过后获得牛互动账号的使用权。牛互动账号是您接受牛互动直播向您提供服务的凭证，同时是您持有、使用、兑换“牛互动”、“牛互动币”等相关虚拟财产的身份凭证。您若需要接受牛互动提供的增值服务，牛互动账号同时也是您支付费用、接受增值服务的凭证。您需要妥善保管账号信息，并对账号中的行为和事件负责。如果由于您的过失导致账户脱离您的控制，给您、牛互动直播或其他第三方造成损害的，您将承担相应责任。\n
第5条牛互动账号仅限于实名认证的本人使用，未经牛互动直播书面同意，禁止任何人以任何形式赠与、出借、出租、转让或者以其他方式许可他人使用。如果牛互动直播发现使用人并非账号实名认证本人，有权在不通知您的情况下暂停或终止向该账号提供服务并收回该账号。若出现账号归属不明的，牛互动直播有权暂停争议账号的服务，并依据争议方提供的证据材料判断归属后作出处理。\n
第6条您可自主设定用户昵称、头像、性别、所在地、简介等个人信息，但不得含有违反法律法规的信息，且不得篡改系统获得用户地理定位或以不正当方式误导系统获取与实际不符的定位，否则牛互动直播有权采取限期改正、删除信息、暂停使用、注销账户等处理措施。如因服务需要，牛互动直播有权在必要范围内采集您的个人信息（包括但不限于姓名、肖像、所在地等），但会事先征求您的同意并遵循合法、正当、必要的原则。牛互动直播将严格按照牛互动《用户隐私协议》对您的个人信息进行收集、使用、存储、管理和保护。\n
第7条您可通过银行账户或第三方支付账户的方式在牛互动直播平台购买牛互动，您对购买过程中发出指令的真实性及有效性承担责任，如无相反证据，指令一经发出不可撤销。在购买过程中可能产生涉及银行或第三方支付账户向您收取手续费，你需自行承担。基于虚拟货币的特殊性和法律规定，牛互动不得用于牛互动直播平台外之用途。
第8条您知悉并认可，在您接受牛互动直播提供的服务时可能包括广告信息，您同意在使用牛互动直播过程中接收由牛互动直播或者其第三方合作伙伴发布的广告信息。牛互动直播依照法律规定对广告信息发布履行相关义务后，您应当自行判断广告信息的真实性并为自己的判断行为负责，除法律明确规定外，您因依该广告信息进行的交易或广告主提供的内容而遭受的损失或损害，牛互动直播不承担责任。\n
第9条如需注销牛互动账号，您可通过本协议附则所列方式联系我们，或参照《用户隐私协议》进行操作。请您理解，注销账号是不可逆的行为，一旦注销您的账号，牛互动直播将删除或匿名化有关您账户的信息且默认您主动放弃账号中的所有资产。比如回放、动态、关注、私信将会被删除且无法找回，账号中的牛互动、牛互动币、交友账单、幸运草、贵族、道具、会员、未提现或提现未到账货币都将被清除。同时，您无法通过已注销的账户获得牛互动直播平台的产品和服务以及产品和服务中与第三方合作的服务内容，如您注销账户再重新注册，原有账户信息也将无法恢复。同时，您知悉并认可，即使账号被注销也并不减轻或免除您在协议期间内应根据相关法律法规、相关协议、规则等需要承担的相关责任。\n
为避免资源浪费，如您注册牛互动账号后连续一年未登录使用的，牛互动直播有权收回该账号。如有异议，您可通过本协议附则所列方式向我们申诉。
第三章牛互动用户\n
第10条凡是使用牛互动直播产品（包括但不限于登陆产品、浏览内容、发布内容、参与活动）的用户均为牛互动用户。如您是未成年人，请在法定监护人陪同下使用牛互动服务；牛互动直播有权根据法律法规及您使用情况，独立判定您的使用行为是否有效。如您是未成年人的监护人，请您保管好您的支付账户以避免未成年人在未取得您同意的情况下使用您的支付账户功能。\n
第11条您选择使用牛互动直播服务，即表示您同意牛互动直播依照法律法规对您的身份信息进行核实。如涉及文化旅游部、公安部、国家互联网信息办公室、国家广播电视总局、全国“扫黄打非”办公室等监管机构及隶属机关的“黑名单”相关人员，牛互动直播有权拒绝向您提供相关服务，就所涉行为，有权依照相关要求及本协议约定进行处理。\n
第12条您可在牛互动直播进行音视频直播、观看音视频直播、与其他用户互动、赠与虚拟礼物或接受赠与、选择增值服务等并承担接受服务所须的带宽、接收设备等费用。您进行音视频直播可能收到用户赠与虚拟礼物，兑换事宜按照牛互动直播《用户兑换协议》。您选择赠与虚拟礼物，除法律法规规定事由外，礼物一经送出不可撤销；您选择增值服务，则可能为此支付相应费用。无论如何，您与牛互动直播不构成法律上任何劳动、劳务或雇佣关系。\n
第四章用户权责\n
第13条您在使用牛互动直播服务时应当遵守国家相关法律法规，包括但不限于《网络安全法》《互联网信息服务管理办法》《计算机信息网络国际联网安全保护管理办法》《互联网文化管理暂行规定》《全国人民代表大会常务委员会关于维护互联网安全的决定》等。\n
第14条您不得在牛互动直播发布、传播或以其它方式传送含有下列之一的内容：\n
（1）反对宪法确定的基本原则，煽动抗拒或者破坏宪法、法律、行政法规实施的；（2）危害国家统一、主权和领土完整，泄露国家秘密，危害国家安全，损害国家尊严、荣誉和利益，宣扬恐怖主义、极端主义的；（3）损害国家荣誉和利益的；（4）歪曲、丑化、亵渎、否定英雄烈士事迹和精神，以侮辱、诽谤或者其他方式侵害英雄烈士的姓名、肖像、名誉、荣誉的；（5）诋毁民族优秀文化传统，煽动民族仇恨、民族歧视，侵害民族风俗习惯，歪曲民族历史和民族历史人物，伤害民族感情，破坏民族团结的；（6）煽动破坏国家宗教政策，宣扬宗教狂热，危害宗教和睦，伤害信教公民宗教感情，破坏信教公民和不信教公民团结，宣扬邪教、迷信的；（7）散布谣言，扰乱社会秩序，破坏社会稳定的；（8）煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的；（9）以非法民间组织名义活动的；（10）危害社会公德，宣扬、传播或暗示淫秽色情、赌博、吸毒，渲染暴力、恐怖，教唆犯罪或者传授犯罪方法的；（11）侵害未成年人合法权益或者损害未成年人身心健康的；（12）侮辱或者诽谤他人，侵害他人合法权益的；（13）侵害他人肖像权、隐私权，或者骚扰他人的；（14）编造虚假信息，侵害他人合法权益的；（15）含有粗俗或其它道德上令人反感的内容的；（16）侵犯他人知识产权的；（17）含有法律、行政法规和国家规定禁止的其他内容或不良信息的。\n
第15条 您不得采用任何形式进行网络赌博活动，包括以牛互动币、牛互动、虚拟礼物等为标的或赌资进行线上赌博，或者通过牛互动组织线下赌博；不得利用牛互动直播进行任何形式洗钱活动。牛互动直播将严密监控此类行为，并对账户异常的虚拟财产流转进行调查，并有权配合主管机关提供您的个人信息、有关账户的交易记录等信息。\n
第16条 您在牛互动直播发布、传播或以其它方式传送的内容，您对其真实性、合法性承担保证责任，由其引起的纠纷由您自行解决。牛互动直播作为网络服务平台，不对内容承担责任，一旦发现虚假及违法内容有权按照本协议采取处理措施。\n
第17条未经权利人授权，您不得上传、发布、传播或以其它方式传送含有第三方知识产权的内容，包括但不限于转播电影、电视剧、网络节目等影视内容或使用属于他人的内容。如相关内容需要使用第三方著作权、商标权，您应保证事先获得第三方合法授权并自行承担相关费用。\n
第18条为维护和谐氛围及正当环境，您不得在牛互动直播以任何方式提及与牛互动直播有竞争关系第三方竞争平台及其家族或工会的直接或间接信息，不得引导其他用户进入第三方竞争平台或为之提供任何便利。\n
第19条禁止以违反平台规则、利用系统或规则漏洞、使用外挂或其它作弊程序等不正当方式，直接或间接地对牛互动账户进行充值、获取牛互动、牛互动币、虚拟礼物、阳光礼物以及平台奖励，侵害牛互动直播或其他用户利益，无论是否实际获得不当利益。\n
第20条禁止在牛互动直播发布无意义的灌水内容（即同一内容高频次发布）、发布严重影响网页浏览的内容、或使用非牛互动直播软件在牛互动直播发布内容。\n
第21条未经书面同意，您不得在牛互动直播发布任何形式的广告、推销任何产品或服务、或其他以获取商业利益为目的行为。\n
第22条在您使用牛互动直播服务时请勿发布或提供您的隐私信息（包括但不限于银行卡、第三方支付账号信息、个人联系方式等）给他人；如涉及用户互动，您须谨慎选择互动对方，避免平台以外的联系或见面，避免提供您的任何联系方式（包括但不限于电话号码、微信、QQ等）；对于涉嫌借款、推销等涉及财产的或传播违法信息的网络联系或推广，请您谨慎对待并自行判断。否则因此造成的风险和损失由您自行承担，牛互动直播不对此承担责任。\n
第五章处理措施\n
第23条除本协议另有约定外，若您违反本协议内容，牛互动直播有权在不提前通知您的情况下直接采取停播、删除、屏蔽、断开链接等必要措施。情节严重的，牛互动直播有权关闭部分或全部账号权限、暂时封禁账号或永久封禁账号，并配合相关主管部门调查处理。\n
如您牛互动账号被暂时封禁的，您账号上的牛互动将被暂时冻结；如账号被永久封禁的，您账号上的牛互动将全部扣除。您将不能继续接受牛互动直播的任何服务，牛互动直播亦不予返还您购买牛互动的现金价值。\n
对于您因违反本协议而获得的收益，牛互动直播有权从您账号里直接扣除相关收益或等额扣除收益；如您的行为给牛互动直播造成直接或间接损失，牛互动直播有权按照平台兑换规则计算后从您账号中扣除与损失等额的牛互动币，不足部分您须补足。\n
第24条若您上传、发布、传播或以其它方式传送的内容涉及反动、淫秽色情、赌博、吸毒、暴力、恐怖、洗钱的，一经发现，牛互动直播将清空账号内容、永久封禁账号并扣除账号现有全部牛互动、牛互动币等虚拟财产。\n
第25条若您账号涉及牛互动或牛互动币异常来源，牛互动直播有权暂时封禁账号并进行调查。经查属实的，牛互动直播有权从您账号里直接扣除异常来源或进行等额扣除，情节严重的，将永久封禁账号并扣除账号现有全部牛互动、牛互动币等虚拟财产。前述所称异常来源包括但不限于：以违反平台规则、利用系统或规则漏洞、使用外挂或其它作弊程序等不正当方式，直接或间接地对牛互动账户进行充值、获取/买卖牛互动账号、牛互动、牛互动币、虚拟礼物、阳光礼物以及平台奖励，侵害牛互动直播或其他用户利益，无论是否实际获得不当利益。\n
第26条若您账号涉及异常，牛互动直播有权暂时封禁账号并进行调查。经查属实的，牛互动直播有权依照本协议第23条处理。前述所称账号异常包括但不限于：使用他人信息或其他非正常手段注册牛互动账号；使用他人牛互动账号；使用他人信息实名认证；同一设备、同一身份证号、同一设备号、同一IP地址下存在多个牛互动账号；恶意开设多个账号或高频次发布重复的、无效的数据和信息。\n
第六章 知识产权\n
第27条牛互动直播对牛互动直播软件、网站、网页应用及其提供的文字、照片、图片、视频、音频、商业标识等内容享有包括著作权、商标权、专利权在内的全部知识产权，受到相关法律保护。牛互动直播授权您在牛互动直播服务中不可转移地非专属地使用。\n
您被授权使用的内容及其它信息仅限个人娱乐或欣赏使用，未经另行授权，不可用于任何其他用途，不得复制、修改软件、反向组译或以其它方式破译或试图破译软件源代码。\n
您通过录屏方式从牛互动直播平台上获取并发布的主播直播内容，不因您的任何使用行为而发生权利转移。牛互动直播有权在不提前通知您的情况下根据被录制主播账号的封禁、注销或牛互动直播平台的规则、业务情况等，对您发布的内容采取删除、屏蔽等措施。\n
第28条您同意将您上传、发布或直播到牛互动直播平台的个人制作的所有视频、音频、文字、照片、图片、音乐等内容以及该等内容所涉姓名权、肖像权、著作权及其他权益授权牛互动直播根据自身需求免费、不受限制地使用或授权第三方使用。\n
您知悉并且同意，您不再使用牛互动直播提供的服务并注销牛互动账号后方可撤销前述授权，如您撤销前述授权，牛互动直播受限于当前技术措施仅得以处理平台明知的内容以及您提供具体链接地址的内容。\n
第七章服务变更、中断或终止\n
第29条鉴于网络服务的特殊性，您同意牛互动直播根据业务情况变更、中断或终止部分或全部的服务，牛互动直播将以事前公告等方式通知您，您应妥善做好数据更新、备份与转移。\n
第30条您同意并知晓，牛互动直播有权根据法律法规规定、相关监管部门要求、牛互动直播平台规则以及业务情况等，经提前通知或事后告知，清理直播及/或回放的内容，或调整直播及/或回放的服务方式。 \n
第31条您理解，牛互动直播需要定期或不定期地对平台产品及设备进行检修或者维护，如因此类情况而造成网络服务在合理时间内中断，牛互动直播无需为此承担责任，牛互动直播将以事前公告等方式通知您。 \n
第32条牛互动直播系统因下列状况，使您无法使用各项服务或导致信息、虚拟财产丢失时，牛互动直播不承担损害赔偿责任，该状况包括但不限于：（1）在公告之系统停机维护、升级、调整期间数据和虚拟财产的暂时丢失；（2）电信通讯或设备出现故障不能进行数据传输的；（3）台风、地震、海啸、洪水、停电、战争、恐怖袭击、政府管制等不可抗力之因素，造成不能提供服务的；（4）由于黑客攻击、计算机故障或病毒、电信部门技术调整或故障、互联网网络故障、相关第三方问题等原因而造成的服务中断或者延迟。若出现上述状况时，牛互动直播将尽努力在第一时间进行修复及补救。\n
第八章责任限制和免责\n
第33条牛互动直播仅为用户提供平台服务，对于由用户提供的内容由用户独立承担所有的风险和后果，牛互动直播没有责任和义务对用户发布在牛互动直播平台上的内容承担任何责任。\n
第34条在任何情况下，牛互动直播均不对任何间接性、后果性、惩戒性、偶然性、特殊性或刑罚性的损害（包括用户使用牛互动直播平台而遭受的损失）承担责任。\n
第35条牛互动直播对用户承担的全部责任，无论因何原因或何种行为方式，始终不超过牛互动直播因用户使用牛互动直播服务而获得的净收入（如有）。\n
第36条牛互动直播不保证为向用户提供便利而设置的外部链接的准确性和完整性，同时，对于该等外部链接指向的不由牛互动直播控制的任何网页上的内容，不承担责任。\n
第九章附则\n
第37条牛互动直播有权在法律允许的范围内对本协议进行修订，修订后的协议将通过公示的方式对您的告知。\n
第38条本协议的成立、生效、履行、解释及纠纷解决均适用中华人民共和国大陆地区法律（不包括冲突法）和政策。\n
第39条因本协议引起的或与本协议有关的争议，首先应当友好协商解决；协商不成的，您同意将争议提交法院解决。\n
</string>

    <string name="tab_face_beautification">美颜</string>
    <string name="tab_filter">滤镜</string>
    <string name="tab_face_beauty_reshape">美型</string>
    <string name="tab_face_makeup">美妆</string>
    <string name="tab_face_beauty_body">美体</string>
</resources>