<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dialog_margin"
    android:layout_marginEnd="@dimen/dialog_margin"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/rtc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/title_rtc"
        android:textSize="18sp"
        android:textColor="@color/colorBasic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/remote_refused_pk_request"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dialog_button_height"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/oval_button_background"
        android:text="@string/confirm_be_refused"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dialog_text_size"
        android:layout_gravity="center"/>
</LinearLayout>
