<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_setting_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/live_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/live_settings_title"
        android:textColor="@color/colorBasic"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/live_setting_title"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:id="@+id/microphone_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/microphone_radios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/live_settings_microphone" />

        <RadioGroup
            android:id="@+id/microphone_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/microphone_on"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/setting_on_text" />

            <RadioButton
                android:id="@+id/microphone_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting_off_text" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speaker_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/microphone_setting_layout"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/speaker_radios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/live_settings_speaker" />

        <RadioGroup
            android:id="@+id/speaker_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/speaker_on"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/setting_on_text" />

            <RadioButton
                android:id="@+id/speaker_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting_off_text" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/flashlight_setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/speaker_setting_layout"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/flashlight_radios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/live_settings_flashlight" />

        <RadioGroup
            android:id="@+id/flashlight_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/flashlight_on"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting_on_text" />

            <RadioButton
                android:id="@+id/flashlight_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/setting_off_text" />
        </RadioGroup>
    </LinearLayout>
</RelativeLayout>