<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dialog_margin"
    android:layout_marginEnd="@dimen/dialog_margin"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">
    <TextView
        android:id="@+id/rtc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/title_rtc"
        android:textSize="18sp"
        android:textColor="@color/colorBasic" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider" />

    <TextView
        android:id="@+id/request_pk_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_gravity="center"
        android:textSize="@dimen/dialog_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/refuse_pk_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/refuse_pk"
            android:textColor="@android:color/white"
            android:background="@drawable/oval_button_background" />
        <Button
            android:id="@+id/accept_pk_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_button_height"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/accept_pk"
            android:textColor="@android:color/white"
            android:background="@drawable/oval_button_background" />
    </LinearLayout>

</LinearLayout>
